--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 .navigation-wrapper {
   height: 60px;
-  background-color: rgb(0, 0, 0);
+  background-color: #000000;
   color: white;
   display: flex;
   align-items: center;
@@ -11,7 +11,8 @@
 .navigation-wrapper > .nav-logo {
   display: flex;
   filter: invert();
-  align-items: flex-start;
+  /* align-items: flex-start; */
+  align
 }
 
 /* We will need to manually asign width and height vaulues in the img */
@@ -30,3 +31,14 @@
   justify-content: space-between;
 }
 
+.navigation-wrapper > .nav-explore > .explore {
+  display: flex;
+  color: #ffff00;
+  opacity: 0.5;
+  text-align: left;
+}
+
+.links-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
